# IndexConstruction

./: mybuffer.h  mycommon.h  myuint.h
IndexForBin/: CMakeLists_src.txt  CMakeLists_top.txt  indexconstruction.cpp  indexconstruction.h  myconfig.h  mytypes.h  myutility.cpp  myutility.h  run.cpp  sais.cpp  saism.h  test_saism.cpp
IndexForConstant/saism/src/: saism.cpp
IndexForConstant/saismm/: CMakeLists.txt  README
IndexForConstant/saismm/src/: CMakeLists.txt  main.cpp  mycommon.h  namespace.h  sachecker.h  saismm.h
IndexForConstantAndInteger/: Readme.txt
IndexForConstantAndInteger/src/: build.cpp  check.cpp  dsais.h
dsais1n/src/: .my_file.h.swp  .my_pq.h.swp  .pq_sub.h.swp  .vector.h.swp  CMakeLists.txt  build.cpp  builder.h  builder.h.old  common.h  io.h  logger.h  pq_sub.h  pq_suf.h  sais.h  sorter.h  test.cpp  test.h  tuple.h  tuple_sorter.h  utility.h  vector.h
