INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")

# add STXXL includes path
INCLUDE_DIRECTORIES(${STXXL_INCLUDE_DIRS})

# builder
ADD_EXECUTABLE(build build.cpp) 
TARGET_LINK_LIBRARIES(build ${STXXL_LIBRARIES})

# checker
ADD_EXECUTABLE(check check.cpp) 
TARGET_LINK_LIBRARIES(check ${STXXL_LIBRARIES})

#formatter
ADD_EXECUTABLE(format format.cpp) 
TARGET_LINK_LIBRARIES(format ${STXXL_LIBRARIES})

#test
ADD_EXECUTABLE(test test.cpp) 
TARGET_LINK_LIBRARIES(test ${STXXL_LIBRARIES})


